<resources>
    <string name="app_name">Gestión Renacer</string>
    <string name="buscar_hint">Buscar a una persona aquí</string>
    <string name="tituloAñadirUsuario">Añadir registro</string>
    <string name="label_nombre">Nombre(s)</string>
    <string name="inserte_su_nombre">Inserte su nombre</string>
    <string name="apellido_s">Apellido(s)</string>
    <string name="inserte_su_apellido">Inserte su apellido</string>
    <string name="n_mero_de_identificaci_n">Número de identificación</string>
    <string name="digite_su_n_mero_de_id">Digite su número de ID</string>
    <string name="tipo_de_documento">Tipo de documento</string>
    <string name="n_mero_de_celular">Celular</string>
    <string name="digite_su_n_mero_de_celular">Digite su número de celular</string>
    <string name="direcci_n">Dirección:</string>
    <string name="inserte_su_direcci_n">Dirección</string>
    <string name="eps">EPS:</string>
    <string name="inserte_su_eps">EPS</string>
    <string name="seleccione_su_tipo_de_documento">Seleccione su tipo de documento</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="nombre_completo">Nombre completo:</string>
    <string name="digite_el_celular_de_su_contacto">Celular del contacto</string>
    <string name="parentesco">Parentesco:</string>
    <string name="direccion_emergencia">Dirección</string>
    <string name="direcci_n_de_su_contacto">Dirección del contacto</string>
    <string name="cargo_en_la_iglesia">Cargo en la iglesia</string>
    <string name="es_lider">¿Es líder?</string>
    <string name="inserte_el_nombre_del_contacto">Nombre del contacto</string>
    <string name="parentesco_con_su_contacto">Parentesco</string>
    <string name="contacto_de_emergencia">Contacto de emergencia</string>
    <string name="boton_para_retroceder">Botón para ir a la ventana anterior</string>
    <string name="permisos_en_la_aplicaci_n">Permisos en la aplicación</string>
    <string name="puede_acceder_a_la_aplicaci_n">¿Puede acceder a la aplicación?</string>
    <string name="crear_usuario">Crear registro</string>
    <string name="el_usuario_es_un_lider">¿El usuario es un líder?</string>
    <string name="el_usuario_puede_acceder_a_la_aplicaci_n">¿El usuario puede acceder a la aplicación?</string>
    <string name="bottomBarText1">Principal</string>
    <string name="bottomBarText2">Reportes</string>
    <string name="bottomBarText3">Pendientes</string>
    <string name="txtFloatBtnAnadirFeligres">Añadir un feligrés.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tooltipBarraBusqueda">Buscar una persona.</string>
    <string name="lblFiltro">Filtrar</string>
    <string name="lblResultados">Resultados</string>
    <string name="lblRolListarFragment">Rol: </string>
    <string name="lblTelListarFragment">Teléfono: </string>
    <string name="lblLiderListarFragment">¿Es líder?: </string>
    <string name="lblFiltrar">Organizar resultados.</string>
    <string name="lblOrdenar">Ordenar por:</string>
    <string name="lblFiltroAlfabeticoAscen">A-Z ascendente.</string>
    <string name="lblFiltroAlfabeticoDescen">A-Z descendente.</string>
    <string name="lblFiltroEdadAscen">Edad ascendente.</string>
    <string name="lblFiltroEdadDescen">Edad descendente.</string>
    <string name="lblFiltroAntiAscen">Mas antiguo.</string>
    <string name="lblFiltroAntiDescen">Menos antiguo.</string>
    <string name="lblEdadFiltro">Edad.</string>
    <string name="lblMin">A partir de:</string>
    <string name="lblMax">Hasta:</string>
    <string name="lblBtnAplicarFiltro">Filtrar y ordenar</string>
    <string-array name="listaTipoDocumento">
        <item>Cédula</item>
        <item>Tarjeta de Identidad</item>
        <item>Pasaporte</item>
    </string-array>
    <string name="tituloEditarUsuario">Editar registro</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="subtituloEstadoDeAtencion">Estado de atención</string>>
    <string name="estado_de_atencion">Cambiar estado de atención</string>>
    <string name="selecc_atencion">Cambie el estado de atención</string>
    <string name="ver_usuario">Ver registro</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="cedula">Cédula</string>
    <string name="sexo">Sexo</string>
    <string name="estado_civil">Estado civil</string>
    <string name="fecha_nacimiento">Fecha Nacimiento:</string>
    <string name="fecha_registro">Fecha Registro:</string>
    <string name="nombre">Nombre:</string>
    <string name="celular">Celular:</string>
    <string name="observaciones">Observaciones</string>
    <string name="bot_n_para_editar_usuario">Botón para editar usuario</string>
    <string name="bot_n_para_borrar_usuario">Botón para borrar usuario</string>>
    <string name="seleccione_el_sexo">Seleccione el Sexo</string>
    <string name="seleccione_el_estado_civil">Seleccione el estado civil</string>
    <string name="selecciones_rol_a_asignar">Rol</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="seleccione_fecha_de_nacimiento">Seleccione fecha de nacimiento</string>
    <string name="otros_datos">Otros datos</string>>
    <string name="no_hay_elementos_a_mostrar">No hay elementos a mostrar</string>>
    <string-array name="listaRoles">
        <item>Feligrés</item>
        <item>Administrador</item>
        <item>Gestor</item>
        <item>Visualizador</item>
    </string-array>
    <string-array name="listaEstadoAtencion">
        <item>Por Llamar</item>
        <item>Llamado</item>
    </string-array>
    <string name="conexión_perdida">Se ha perdido la conexión a internet</string>
    <string name="btn_reintentar_conexión">Reintentar</string>
    <string-array name="listaSexos">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="listaEstadoCivil">
        <item>Soltero(a)</item>
        <item>Casado(a)</item>
        <item>Unión libre</item>
        <item>Divorciado(a)</item>
        <item>Viudo(a)</item>
    </string-array>
    <string name="lblFiltroEstadoCivil">Estado civil.</string>
    <string name="lblFiltroSexo">Sexo.</string>
    <string name="lblFiltroMasculino">Masculino.</string>
    <string name="lblFiltroFemenino">Femenino.</string>
    <string name="lblFiltroCasado">Casado(a).</string>
    <string name="lblFiltroSoltero">Soltero(a).</string>
    <string name="lblFiltroLibre">Unión libre.</string>
    <string name="lblFiltroDivorciado">Divorciado(a).</string>
    <string name="lblFiltroViudo">Viudo(a).</string>
    <string name="lblFiltroSheet">Filtrar por:</string>
    <string name="nombre_del_grupo">Nombre del grupo</string>
    <string name="deseas_crear_un_grupo_con_estos_filtros">¿Deseas crear un grupo con estos filtros?</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="checkbox_select_all">Seleccionar Todos</string>
    <string name="outlined_icon_btn_desc">Cancelar</string>
    <string name="txtModalTelRep">El correo electrónico ingresado ya está registrado. Reintenta nuevamente con otro.</string>
    <string name="txtModalTelExcep">No se ha podido guardar el registro. Reintenta más tarde.</string>
    <string name="titModalError">Error.</string>
    <string name="txtBtnAceptar">Aceptar</string>
    <string name="txtModalEliminar">¿Estás seguro de que deseas eliminar a los usuarios seleccionados?</string>
    <string name="txtErrorBorrarAdmin">Debes conservar al menos un administrador en la lista.</string>
    <string name="txtErrorBorrarTodos">No puedes borrar tu propio registro.</string>
    <string name="txtPlantilla">Plantillas guardadas.</string>
    <string name="txtGrupos">Grupos.</string>
    <string name="txtFiltroSms">Filtros aplicados.</string>
    <string name="lblMensaje">Mensaje</string>
    <string name="lblNomPlantilla">Nombre plantilla.</string>
    <string name="lblBtnLogin">Iniciar sesión con Google</string>
    <string name="lblBtnEnvGuardSms">Enviar y guardar mensaje</string>
    <string name="txtCrearPlantilla">¿Crear una plantilla a partir de este mensaje?</string>
    <string name="txtErrorSms">No se podido enviar los SMS, reintenta más tarde.</string>
    <string name="txtTodaEdad">Todas las edades.</string>
    <string name="txtEnvPersonSel">El mensaje se enviará a </string>
    <string name="lblMensajeria">Mensajería</string>
    <string name="ingrese_el_c_digo_que_ha_recibido_por_sms">Ingrese el código que ha recibido por SMS</string>
    <string name="c_digo_sms">Código SMS</string>
    <string name="verificar_c_digo">Verificar Código</string>
    <string name="feligr_s">Feligrés</string>
    <string name="lbl_Usar_Huella">Usar Huella</string>>
    <string name="tituloMensajeria">Mensajería</string>
    <string name="ya_hay_un_grupo_con_ese_nombre_elige_otro">Ya hay un grupo con ese nombre. Elige otro</string>
    <string name="por_favor_asigna_un_nombre_al_grupo">Por favor, asigna un nombre al grupo</string>
    <string name="escribe_el_nombre_del_grupo">Escribe el nombre del grupo</string>
    <string name="crear_plantilla_y_enviar">Crear plantilla y enviar</string>
    <string name="plantillas_de_mensajes">Plantillas de mensajes</string>
    <string name="nombre_de_la_plantilla">Nombre de la plantilla</string>
    <string name="deseas_crear_una_plantilla_de_este_mensaje">¿Deseas crear una plantilla de este mensaje?</string>
    <string name="grupos_predeterminados">Grupos predeterminados</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="txtErrPlantilla">Ya hay una plantilla con ese nombre.</string>
    <string name="txtNoPerSms">No hay personas que coincidan con los filtros.</string>
    <string name="txtGrupoErrNoEncontrado">No existe un grupo con ese nombre.</string>
    <string name="txtSmsEnviados">Los SMS fueron planificados satisfactoriamente.</string>
    <string name="no_especificado">No especificado</string>
    <string name="el_servicio_est_muy_ocupado_por_favor_intente_m_s_tarde">El servicio está muy ocupado. Por favor, intente más tarde.</string>
    <string name="tituloReportes">Reportes</string>
    <string name="lblMensajeHist">Mensaje.</string>
    <string name="lblEnviadoHist">Enviado a: </string>
    <string name="lblFechaHist">Fecha envío:</string>
    <string name="lblHistSms">Historial de mensajes</string>
    <string name="lblBtnHistSms">Ver historial</string>
    <string name="lblGrupoHist">Grupo:</string>
    <string name="txtPermisoSms">No podrás enviar SMS hasta que concedas el permiso.</string>
    <string name="txtAviso">Aviso.</string>
    <string name="txtEmail">Correo electrónico</string>
    <string name="txtErrEmailGoo">Solo se aceptan correos de Gmail.</string>
    <string name="txtCorreo">Correo electrónico:</string>
    <string name="webClientId">400377355661-vq6g54ps8m76t55o8rs6ai6asjqnvu3b.apps.googleusercontent.com</string>
    <string name="lblBtnEnviarSms">Enviar mensaje</string>
    <string name="txtErrorGoogle">No se ha podido iniciar sesión, comprueba tu tus credenciales o conexión y reintenta.</string>
    <string name="txtErrorAut">No hay un usuario asociado a la cuenta de Google utilizada.</string>
</resources>