<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/lblGuardSms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtSms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:hint="@string/lblMensaje"
                    android:maxLength="160"
                    app:counterEnabled="true"
                    app:counterMaxLength="160"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="3" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblFiltros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/txtFiltroSms"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtSms" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filtrosCont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    app:chipSpacingVertical="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblFiltros">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCasado"
                        style="@style/Widget.Material3.Chip.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblFiltroCasado"
                        android:visibility="gone" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSoltero"
                        style="@style/Widget.Material3.Chip.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblFiltroSoltero"
                        android:visibility="gone" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipFemenino"
                        style="@style/Widget.Material3.Chip.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblFiltroFemenino"
                        android:visibility="gone" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMasculino"
                        style="@style/Widget.Material3.Chip.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblFiltroMasculino"
                        android:visibility="gone" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipLibre"
                        style="@style/Widget.Material3.Chip.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblFiltroLibre"
                        android:visibility="gone" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipViudo"
                        style="@style/Widget.Material3.Chip.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblFiltroViudo"
                        android:visibility="gone" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipEdadMax"
                        style="@style/Widget.Material3.Chip.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMax"
                        android:visibility="gone" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipEdadMin"
                        style="@style/Widget.Material3.Chip.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMin"
                        android:visibility="gone" />

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/lblGrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/txtGrupos"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filtrosCont" />

                <TextView
                    android:id="@+id/lblPlantilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/txtPlantilla"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblGrupos" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/lblGuardSms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/txtCrearPlantilla"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/txtPlantilla"
            app:layout_constraintEnd_toStartOf="@id/switchGuardSms"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchGuardSms"
            style="@style/Widget.App.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="30dp"
            android:checked="false"
            android:contentDescription="@string/el_usuario_es_un_lider"
            app:layout_constraintBottom_toTopOf="@id/txtPlantilla"
            app:layout_constraintEnd_toEndOf="parent"
            app:thumbTint="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPlantilla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:enabled="false"
            android:hint="@string/lblNomPlantilla"
            app:layout_constraintBottom_toTopOf="@id/buttonEnviar"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/azulPrincipal"
            android:enabled="false"
            android:text="@string/lblBtnEnviarSms"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>