<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_el_c_digo_que_ha_recibido_por_sms"
        android:textSize="16sp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/verificationCodeInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:maxLength="6"
    android:hint="@string/c_digo_sms"
    android:inputType="number"
    android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyButton"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/verificar_c_digo"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:textAllCaps="false" />

    <!-- Indicador de carga -->
    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>
